# icnpg17_finalProj_openCVCUDA

./: README.md  build_sample_1.sh  build_sample_2.sh  build_sample_3.sh  run_sample_1.sh  run_sample_2.sh  run_sample_3.sh
1_bilFilCanny/: CMakeLists.txt  main.cpp
2_color2Gray/: CMakeLists.txt  colour2GrayPara.cu  colour2GraySerial.cpp  colour2GraySerial.h  compare.cpp  compare.h  complFn.cpp  main.cpp
3_blurring/: CMakeLists.txt  blurPara.cu  blurSerial.cpp  blurSerial.h  compare.cpp  compare.h  complFn.cpp  main.cpp
